--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>FoundryAI</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/static/style.css" />
+
 </head>
 <body>
 
@@ -85,6 +86,6 @@
 
 </div>
 
-<script src="app.js"></script>
+<script src="/static/app.js"></script>
 </body>
 </html>
