--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>FoundryAI</title>
-  <link rel="stylesheet" href="/static/style.css" />
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -86,6 +85,6 @@
 
 </div>
 
-<script src="/static/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
